// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminNavigation /> should render correctly - index 1`] = `
<div>
  <div
    aria-label="Loading"
  >
    <div
      class="sc-idXgbr irOVYZ"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="admin-navigationstyles__CardContainer-sc-n2t86e-0 dKRGMR"
    >
      <div
        class="sc-idXgbr kBIQoq"
      >
        <div
          class="sc-dIfARi hEqwgc"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-idXgbr kBIQoq"
      >
        <div
          class="sc-dIfARi hEqwgc"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-idXgbr kBIQoq"
      >
        <div
          class="sc-dIfARi hEqwgc"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with admin user 1`] = `
<div>
  <div
    class="sc-iAEawV hlvFhc"
    width="default"
  >
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL ewlzmZ"
      >
        Admin
      </h1>
    </div>
    <div
      class="admin-navigationstyles__CardContainer-sc-n2t86e-0 dKRGMR"
    >
      <div
        class="sc-kgTSHT eWpXqd"
      >
        <div
          class="sc-fLcnxK cUOGbq"
        />
        <div
          class="sc-bBABsx kLHrUJ"
        >
          <div
            aria-hidden="true"
            class="sc-kMjNwy cmaPuj"
          >
            <div
              class="sc-ilhmMj fwSest date container"
            />
            <div
              class="sc-jIRcFI hPSbcn"
            >
              <h1
                class="sc-jSUZER glQaLI"
              >
                Debug
              </h1>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-kgTSHT eWpXqd"
      >
        <div
          class="sc-fLcnxK cUOGbq"
        />
        <div
          class="sc-bBABsx kLHrUJ"
        >
          <div
            aria-hidden="true"
            class="sc-kMjNwy cmaPuj"
          >
            <div
              class="sc-ilhmMj fwSest date container"
            />
            <div
              class="sc-jIRcFI hPSbcn"
            >
              <h1
                class="sc-jSUZER glQaLI"
              >
                Analytics
              </h1>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-kgTSHT eWpXqd"
      >
        <div
          class="sc-fLcnxK cUOGbq"
        />
        <div
          class="sc-bBABsx kLHrUJ"
        >
          <div
            aria-hidden="true"
            class="sc-kMjNwy cmaPuj"
          >
            <div
              class="sc-ilhmMj fwSest date container"
            />
            <div
              class="sc-jIRcFI hPSbcn"
            >
              <h1
                class="sc-jSUZER glQaLI"
              >
                Emails
              </h1>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-kgTSHT eWpXqd"
      >
        <div
          class="sc-fLcnxK cUOGbq"
        />
        <div
          class="sc-bBABsx kLHrUJ"
        >
          <div
            aria-hidden="true"
            class="sc-kMjNwy cmaPuj"
          >
            <div
              class="sc-ilhmMj fwSest date container"
            />
            <div
              class="sc-jIRcFI hPSbcn"
            >
              <h1
                class="sc-jSUZER glQaLI"
              >
                Notifications
              </h1>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-kgTSHT eWpXqd"
      >
        <div
          class="sc-fLcnxK cUOGbq"
        />
        <div
          class="sc-bBABsx kLHrUJ"
        >
          <div
            aria-hidden="true"
            class="sc-kMjNwy cmaPuj"
          >
            <div
              class="sc-ilhmMj fwSest date container"
            />
            <div
              class="sc-jIRcFI hPSbcn"
            >
              <h1
                class="sc-jSUZER glQaLI"
              >
                Users
              </h1>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with auth error 1`] = `
<div>
  <div
    aria-label="Loading"
  >
    <div
      class="sc-idXgbr irOVYZ"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="admin-navigationstyles__CardContainer-sc-n2t86e-0 dKRGMR"
    >
      <div
        class="sc-idXgbr kBIQoq"
      >
        <div
          class="sc-dIfARi hEqwgc"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-idXgbr kBIQoq"
      >
        <div
          class="sc-dIfARi hEqwgc"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-idXgbr kBIQoq"
      >
        <div
          class="sc-dIfARi hEqwgc"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
  <div
    class="sc-hBxehG julUME"
  >
    <h1
      class="sc-gKPRtg jJVvWo sc-bjfHbI iYWdbA"
      id="this-is-taking-a-while.-maybe-something-isn't-quite-right..."
    >
      This is taking a while. Maybe something isn't quite right...
    </h1>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with initial state 1`] = `
<div>
  <div
    aria-label="Loading"
  >
    <div
      class="sc-idXgbr irOVYZ"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="admin-navigationstyles__CardContainer-sc-n2t86e-0 dKRGMR"
    >
      <div
        class="sc-idXgbr kBIQoq"
      >
        <div
          class="sc-dIfARi hEqwgc"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-idXgbr kBIQoq"
      >
        <div
          class="sc-dIfARi hEqwgc"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-idXgbr kBIQoq"
      >
        <div
          class="sc-dIfARi hEqwgc"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-iAEawV hlvFhc"
    width="default"
  >
    <div
      class="sc-hBxehG julUME"
    >
      <h1
        class="sc-jSUZER glQaLI sc-bjfHbI cBkNPA"
        id="admin-only"
      >
        Admin only
      </h1>
      <span
        class="sc-iTFTee diVeHp"
      >
        You need to be logged in with an admin account to view this content.
        <br />
        <a
          class="sc-gswNZR bbFtvE"
          href="/login"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            Got a different admin account? Log in here.
          </span>
        </a>
      </span>
    </div>
  </div>
</div>
`;
